# Projeto-Codeflix

./: .gitignore  Dockerfile  LICENSE  docker-compose.override.yaml  p10k.zsh  pyproject.toml
.devcontainer/: devcontainer.json
.docker/zsh/powerlevel10k/: .p10k.zsh  .zshrc
micro-videos/: Dockerfile  docker-compose.yaml
micro-videos/.devcontainer/: devcontainer.json
micro-videos/src/category/: entities.py
micro-videos/src/category/domain/: entities.py
micro-videos/src/category/tests/domain/: test_entities.py
micro-videos/src/category/tests/unit/domain/: test_unit_entities.py
micro-videos/uml/: class-diagram.wsd
src/__seedwork/domain/: entities.py  exceptions.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_value_objects.py
src/category/domain/: entities.py
src/category/tests/unit/domain/: test_unit_entities.py
uml/usecases/: category.usecase.wsd
