[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Victor Kokado", email = "victornerikokado@yahoo.com"},
]
dependencies = [
]
requires-python = ">=3.10.2"
license = {text = "MIT"}
